Clean up ClassRealmImplTest: remove excessive blank lines and duplicate license header
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>